--- a/webgl/casa/webgl.html
+++ b/webgl/casa/webgl.html
@@ -11,13 +11,14 @@
       justify-content: center;
       align-items: center;
       height: 100vh;
-      background-color: black;
+      background-image: radial-gradient(circle at 120.71% 50%, 
+        #ffffff 0, #ffffff 16.67%, #ffffff 33.33%, #ffffff 50%,
+        #eee3e7 66.67%, #e0ced6 83.33%, #d6c1cd 100%);
     }
     canvas {
-      border: 4px solid white;
-      border-radius: 10% ;
-      height: 90%;
-      width: 80%;
+      border: 2px solid black;
+      border-radius: 5% ;
+      
     }
   </style>
 </head>
